<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PingMonitor</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>

    <!-- Status -->
    <string name="status_monitoring">Monitoring</string>
    <string name="status_paused">Paused</string>
    <string name="status_stopped">Stopped</string>

    <!-- Buttons -->
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_clear_data">Clear Data</string>

    <!-- Metrics -->
    <string name="label_current_ping">Current Ping</string>
    <string name="label_avg_ping">Average Ping</string>
    <string name="label_min_ping">Minimum Ping</string>
    <string name="label_max_ping">Maximum Ping</string>
    <string name="label_packet_loss">Packet Loss</string>
    <string name="label_last_updated">Last Updated</string>

    <!-- Settings -->
    <string name="pref_title_ping_interval">Ping Interval</string>
    <string name="pref_desc_ping_interval">Set ping interval in seconds</string>
    <string name="pref_title_target_host">Target Host</string>
    <string name="pref_desc_target_host">Hostname or IP address to ping</string>
    <string name="pref_title_notifications">Enable Notifications</string>
    <string name="pref_title_high_latency_alert">High Latency Alert</string>
    <string name="pref_title_alert_threshold">Alert Threshold (ms)</string>

    <!-- Messages -->
    <string name="msg_no_data">No data available</string>
    <string name="msg_permission_denied">Permission denied</string>
    <string name="msg_network_error">Network error</string>
    <string name="msg_success">Success</string>
    <string name="msg_error">Error</string>
    <string name="msg_monitoring_started">Monitoring started</string>
    <string name="msg_monitoring_stopped">Monitoring stopped</string>
    <string name="msg_high_latency">High latency detected</string>

    <!-- Widget -->
    <string name="widget_title">Ping Monitor</string>
    <string name="widget_tap_to_open">Tap to open app</string>
</resources>
