<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.devismwanzi.pingmonitor.ui.fragment.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.devismwanzi.pingmonitor.ui.fragment.StatisticsFragment"
        android:label="@string/title_statistics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.devismwanzi.pingmonitor.ui.fragment.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>
